# easyscaner

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ScanerPath.cmake  gtest.md
EasyScaner/: Scaner.cpp  Scaner.hpp  ScanerAPI.hpp  Vehicle.cpp  Vehicle.hpp
buildimage/: Dockerfile
docs/: Doxyfile
docs-compiled/: New Текстовый документ.txt
docs-compiled/html/: intro.html  samples.html
docs/source/: conf.py
python/: CMakeLists.txt  setup.py
python/src/: main.cpp
samples/EasyScaner/: ChangeLane.cpp  Decelerate.cpp  HelloWorld.cpp  IDM+ with sensors.cpp  IDM+.cpp  MOBIL.cpp
samples/ScanerAPI/getSpeed/: main.cpp
samples/python/: IDM+.py  add.py  change_lane.py  decelerate.py  display_message.py  getinfo.py  infrastructure_info.py  videoDemoChangeLane.py
test/include/ScanerAPI/: ScanerAPImessagesNetwork.h  ScanerAPImessagesShm.h  scanerAPI_DLL_C.h  scanerAPI_DLL_Enums.h  windowsSharedMemory.h
